; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_mimefilter.c_image_tiff_filter.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_mimefilter.c_image_tiff_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@image_tiff_filter.magic1 = internal constant [4 x i32] [i32 77, i32 77, i32 0, i32 42], align 16
@image_tiff_filter.magic2 = internal constant [4 x i32] [i32 73, i32 73, i32 42, i32 255], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @image_tiff_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @image_tiff_filter(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sge i32 %5, 4
  br i1 %6, label %7, label %18

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @memcmp(i32* %8, i32* getelementptr inbounds ([4 x i32], [4 x i32]* @image_tiff_filter.magic1, i64 0, i64 0), i32 4)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @memcmp(i32* %12, i32* getelementptr inbounds ([4 x i32], [4 x i32]* @image_tiff_filter.magic2, i64 0, i64 0), i32 4)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  br label %16

16:                                               ; preds = %11, %7
  %17 = phi i1 [ true, %7 ], [ %15, %11 ]
  br label %18

18:                                               ; preds = %16, %2
  %19 = phi i1 [ false, %2 ], [ %17, %16 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i32 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
